backend/build/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-mud-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx-private
    cert-manager.io/cluster-issuer: "letsencrypt-route53"
spec:
  rules:
    - http:
        paths:
          - path: /api/templates
            backend:
              serviceName: go-mud-template-service
              servicePort: 8080
  tls:
    - hosts:
        - holymagingmages.com
      secretName: go-mud-cert
